--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <a href="./3 Slot Slots/index3SM.html"><button class="playButton" >Three Slots Slot Machine</button></a>
         </div>
         <div class="BlackJack">
-            <a href="./Black Jack/index.html"><button class="playButton" >Three Slots Slot Machine</button></a>
+            <a href="./Black Jack/index.html"><button class="playButton" >Black Jack</button></a>
         </div>
     </div>
 
