--- a/Black Jack/index.html
+++ b/Black Jack/index.html
@@ -9,10 +9,10 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Oooh+Baby&family=Pushster&family=Teko&family=Ubuntu:ital@1&family=Vujahday+Script&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <title>Black Jack</title>
+    <title>Pure Luck Black Jack</title>
 </head>
 <body>
-    <h1 class="title">BLACK JACK</h1>
+    <h1 class="title">PURE LUCK BLACK JACK</h1>
     <div class="main">
         <h2><span id="command">Gambling Time</span></h2>
         <div class="row1">
